# nn-rs

./: .rustfmt.toml  Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: activator.rs  data_loader.rs  error.rs  lib.rs  nn.rs  prelude.rs
src/nn/: layer.rs
tests/test_nn/: test_nn.rs
