[package]
name = "nn_rs"
version = "0.1.2"
edition = "2024"
authors = ["Neil Wang <wrz750726@gmail.com>"]

[dependencies]
anyhow = "1.0.97"
env_logger = "0.11.7"
image = "0.25.6"
log = "0.4.27"
mnist = { version = "0.6.0", features = ["download"] }
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
ndarray = { version = "0.16.1", features = ["serde"] }
blas-src = { version = "0.11" }
postcard = { version = "1.1.1", features = ["alloc"] }
rand = "0.9.0"
rand_distr = "0.5.1"
serde = "1.0.219"
thiserror = "2.0.12"
base64 = "0.22.1"

[target.'cfg(target_os = "macos")'.dependencies]
ndarray = { version = "0.16.1", features = ["serde", "blas"] }
blas-src = { version = "0.11", features = ["accelerate"] }

[target.'cfg(target_os = "linux")'.dependencies]
ndarray = { version = "0.16.1", features = ["serde", "blas"] }
blas-src = { version = "0.11", default-features = false, features = [
  "openblas",
] }
openblas-src = { version = "0.10", default-features = false, features = [
  "cblas",
  "system",
] }


[[test]]
name = "nn_test"
path = "tests/test_nn/test_nn.rs"
